--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -75,7 +75,7 @@ jobs:
   publish-libs:
     runs-on: ubuntu-latest
     needs: [params, publish-root]
-    if: needs.params.outputs.update-libs == 'true'
+    if: always() && needs.params.outputs.update-libs == 'true'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -93,7 +93,7 @@ jobs:
   publish-root:
     runs-on: ubuntu-latest
     needs: params
-    if: needs.params.outputs.update-root == 'true'
+    if: always() && needs.params.outputs.update-root == 'true'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
