FIX: moving aws-sdk devDependencies to dependencies

--- a/packages/admin-backend/package.json
+++ b/packages/admin-backend/package.json
@@ -10,9 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@defol-cl/libs": "1.0.14"
-  },
-  "devDependencies": {
-    "aws-sdk": "^2.993.0"
+    "@defol-cl/libs": "1.0.14",
+    "aws-sdk": "^2.1023.0"
   }
 }
