--- a/packages/app-backend/package.json
+++ b/packages/app-backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@defol-cl/libs": "1.0.14",
+    "@defol-cl/root": "1.0.14",
     "aws-sdk": "^2.1023.0"
   },
   "devDependencies": {
