--- a/packages/app-frontend/package.json
+++ b/packages/app-frontend/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
+    "react-use": "^17.3.1",
     "styled-components": "^5.3.1",
     "typescript": "^4.3.5",
     "web-vitals": "^1.0.1",
