--- a/packages/app-backend/cloudformation.yaml
+++ b/packages/app-backend/cloudformation.yaml
@@ -56,6 +56,8 @@ Globals:
     Runtime: nodejs12.x
     Timeout: 200
     MemorySize: 1024
+    Layers:
+      - !Ref RuntimeDependenciesLayer
     Environment:
       Variables:
         CONVENIO_TABLE: !Ref ConvenioTable
