--- a/packages/app-backend/cloudformation.yaml
+++ b/packages/app-backend/cloudformation.yaml
@@ -105,6 +105,7 @@ Resources:
                   - dynamodb:ReturnConsumedCapacity
                   - dynamodb:ReturnValues
                   - dynamodb:Select
+                  - dynamodb:Query
                 Resource: "*"
 
   Api:
