--- a/packages/app-frontend/package.json
+++ b/packages/app-frontend/package.json
@@ -20,7 +20,9 @@
     "aws-amplify-react": "^5.1.2",
     "axios": "^0.21.1",
     "formik": "^2.2.9",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-countup": "^6.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-use": "^17.3.1",
