--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -334,7 +334,7 @@ jobs:
           --s3-bucket ${{ env.RESOURCE_S3_BUCKET }} \
           --capabilities CAPABILITY_IAM --region ${{ secrets.AWS_REGION }} \
           --parameter-overrides ResourcesBucket=${{ env.RESOURCE_S3_BUCKET }} Sha=${{ github.sha }} \
-          Branch=${{ steps.branch.outputs.name }}
+          Branch=${{ steps.branch.outputs.name }} \
           ConvenioTable=/defol/${{ steps.branch.outputs.name }}/base/resources-table-convenio \
           ConvenioModeradorTable=/defol/${{ steps.branch.outputs.name }}/base/resources-table-convenio-moderador \
           ConvenioContactoTable=/defol/${{ steps.branch.outputs.name }}/base/resources-table-convenio-contacto \
