FIX: lambda permissions (scan dynamodb), pre token lambda response

--- a/packages/admin-backend/cloudformation.yaml
+++ b/packages/admin-backend/cloudformation.yaml
@@ -106,6 +106,7 @@ Resources:
                   - dynamodb:ReturnValues
                   - dynamodb:Select
                   - dynamodb:Query
+                  - dynamodb:Scan
                 Resource: "*"
 
   Api:
